Fix typos on swaggers
